Teste: getAllProducts criado